# RustNoobFun

./: .gitignore  .replit  README.md
aws_iam_scan/: Cargo.toml
aws_iam_scan/src/: main.rs
blackjack/: Cargo.toml
blackjack/src/: blackjack.rs  cards.rs  main.rs
number_guessing_game/src/: game.rs  main.rs
rock_paper_scissors/: Cargo.toml
rock_paper_scissors/src/: main.rs
simple_rest_api/: Cargo.toml
simple_rest_api/src/: main.rs
