[package]
name = "simple_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
aws-config = "0.10.1"
aws-sdk-dynamodb = "0.10.1"
tokio = { version = "1", features = ["full"] }
